<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_retry_simulate">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/title_result_simulation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_simulation"
                    android:textColor="@android:color/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/space_title_result_simulation"
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_result_simulation" />

                <TextView
                    android:id="@+id/gross_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space_title_result_simulation"
                    tools:text="R$ 1.088,69" />

                <Space
                    android:id="@+id/space_gross_amount"
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gross_amount" />

                <TextView
                    android:id="@+id/gross_amount_profit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/gross_amount_profit"
                    android:textColor="@android:color/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space_gross_amount" />

                <Space
                    android:id="@+id/space_gross_amount_profit"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gross_amount_profit" />

                <include
                    android:id="@+id/include_invested_amount"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space_gross_amount_profit" />

                <include
                    android:id="@+id/include_gross_amount"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_invested_amount" />

                <include
                    android:id="@+id/include_gross_amount_profit"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_gross_amount" />

                <include
                    android:id="@+id/include_taxes_rate"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_gross_amount_profit" />

                <include
                    android:id="@+id/include_net_amount"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_taxes_rate" />

                <Space
                    android:id="@+id/space"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_net_amount" />

                <include
                    android:id="@+id/include_maturity_date"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space" />

                <include
                    android:id="@+id/include_maturity_total_days"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_maturity_date" />

                <include
                    android:id="@+id/include_monthly_gross_rate_profit"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_maturity_total_days" />

                <include
                    android:id="@+id/include_rate"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_monthly_gross_rate_profit" />

                <include
                    android:id="@+id/include_yearly_interest_rate"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_rate" />

                <include
                    android:id="@+id/include_rate_profit"
                    layout="@layout/item_simulate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_yearly_interest_rate" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_retry_simulate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/retry_simulate" />

    </RelativeLayout>

</layout>